--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,23 @@
 
+name: Deploy website on push
+on:
+  push:
+    branches: [main]
+jobs:
+  web-deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get latest code
+        uses: appleboy/ssh-action@master
+        with:
+          host: thewall.host4india.in 
+          username: ${{ secrets.ftp_username }}
+          password: ${{ secrets.ftp_password }}
+          server-dir: /public_html/testing
+          script: |
+            cd public_html
+            git pull origin main
+            git status
+
+
