--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,17 @@
-
-name: Deploy website on push
+name: CI -> Deploy to My website
 on:
   push:
-    branches: [main]
+    branches: [ main, development ]
 jobs:
-  web-deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Get latest code
-        uses: appleboy/ssh-action@master
+      - uses: actions/checkout@v4
+      # Here is the deployment action
+      - name: Upload from public_html via FTP
+        uses: airvzxf/ftp-deployment-action@latest
         with:
-          host: thewall.host4india.in 
-          username: ${{ secrets.ftp_username }}
-          password: ${{ secrets.ftp_password }}
-          script: |
-            cd public_html
-            git pull origin main
-            git status
-
-
+          server: ftp.thewall.host4india.in
+          user: gitaction@thewall.host4india.in
+          password: t#y}ChwC47i(
+         
