--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Upload from public_html via FTP
         uses: airvzxf/ftp-deployment-action@latest
         with:
-          server: ftp.thewall.host4india.in
-          user: gitaction@thewall.host4india.in
-          password: t#y}ChwC47i(
+          server: 172.105.127.109
+          user: thewallhost4indi
+          password: r{7ENs[!Stb;
          
