--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
           server: 172.105.127.109
           user: thewallhost4indi
           password: r{7ENs[!Stb;
-          local-dir: /public_html/gitaction
+          local-dir: public_html/gitaction
