--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: CI -> Deploy to My website
 on:
   push:
-    branches: [ main ,dev]
+    branches: [main]
 jobs:
   build:
     runs-on: ubuntu-latest
