--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           server: 172.105.127.109
           user: krish@thewall.host4india.in
           password: z^,DVbh=w?zc
-          local_dir: ./public_html
+          local_dir: public_html
           script: |
             cd public_html
             git pull origin main
